# interview-preparations

./: .gitignore  package.json  pyproject.toml
amazon/: purchase_items_test.py  test.py
arrays_and_hashing/: contains_duplicate_test.py  two_sum_test.py  valid_anagram_test.py
bfs/: 1e_binary_tree_level_order_traversal_test.py  2e_binary_tree_reverse_level_order_test.py  3m_zigzag_traversal_test.py  5e_minimum_depth_of_binary_tree_test.py  6e_level_order_successor_test.py
cyclic_sort/: 1_cyclic_sort_easy_test.py  2e_find_missing_number_test.py  3e_find_all_missing_numbers_test.py  5e_find_all_duplicate_numbers_test.py  7m_find_smallest_positive_number_test.py
dfs/: 2m_all_paths_for_sum_test.py  5m_count_paths_for_sum_test.py  6m_tree_diameter_test.py  7h_path_with_maximum_sum_test.py
easy/: 1.two_sum.py  3_two_sum.py  4_two_sum_test.py  two_sum.py
fast_and_slow_pointers/: 1a_start_easy_test.py  1a_start_of_linked_list_easy_test.py  2_cycle_start_medium_test.py  3_happy_number_medium_test.py  4_middle_of_linked_list_easy_test.py  5_palindrome_medium_test.py  7_array_cycle_hard_test.py  index_test.py
hard/: median_of_two_sorted_arrays_test.py
inplace_linked_list_reversal/: 1e_reverse_linked_list_test.py  2m_reverse_sub_list_test.py  3m_reverse_every_k_element_sublist_test.py
leetcode/easy/: 1.two_sum.py  (+5 more)
medium/: add_two_numbers.py
merge_intervals/: 1_merge_intervals_medium_test.py  2_intervals_intersection_medium_test.py  5_max_cpu_load_hard_test.py  6_employee_free_time_hard_test.py
sliding_window/: main.py
two_heaps/: 3h_maximize_capital_test.py
(+131 files in other folders)
