[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["Dmytro Soltysiuk <dimasoltusyuk@gmail.com>"]

[tool.pyright]

[tool.poetry.dependencies]
python = "3.10.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
